# CS2-Calculator-FaroukYoussef-AyaNoaman

./: .gitignore  CMakeLists.txt  README.md
src/: bigint.cpp  bigint.h  calculator.cpp  calculator.h  main.cpp  p  parser  parser.cpp  parser.h  test.cpp
src/parser.dSYM/Contents/Resources/DWARF/: parser
tests/: bigint.cpp  calculator.cpp  parser.cpp
